polish ipynb text

--- a/example/pipeline/pipeline_pdf_extract_transform.ipynb
+++ b/example/pipeline/pipeline_pdf_extract_transform.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Example of pipeline: extracting and transforming pdf file\n",
     "\n",
-    "In this example, we will show you how to end-to-end generate question-answers (QAs) from a given pdf using uniflow's `MultiFlowsPipeline`."
+    "In this example, we will show you how use uniflow to extract and transform knowledge from a unstructured pdf file.\n",
+    "\n",
+    "Specifically, we will show you how to end-to-end generate question-answers (QAs) from a given pdf using uniflow's `MultiFlowsPipeline`."
    ]
   },
   {
@@ -138,7 +140,7 @@
    "source": [
     "### Prepare sample prompts\n",
     "\n",
-    "We need to demonstrate sample prompts for LLM. We do this by giving a sample list of `Context` examples to the `GuidedPrompt` class."
+    "Now we need to write a little bit prompts to generate question and answer for a given paragraph, each promopt data includes a instruction and a list of examples with \"context\", \"question\" and \"answer\". We do this by giving a sample list of `Context` examples to the `GuidedPrompt` class."
    ]
   },
   {
