--- a/example/transform/huggingface_model_self_instruct_html_QA.ipynb
+++ b/example/transform/huggingface_model_self_instruct_html_QA.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
       "  _torch_pytree._register_pytree_node(\n",
       "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/utils/generic.py:309: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
       "  _torch_pytree._register_pytree_node(\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [00:04<00:00,  2.43s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:04<00:00,  2.46s/it]\n"
      ]
     }
    ],
@@ -332,7 +332,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [03:08<00:00, 188.06s/it]\n"
+      "100%|██████████| 1/1 [03:08<00:00, 188.53s/it]\n"
      ]
     }
    ],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -386,33 +386,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_6b2ae th {\n",
+       "#T_ca45c th {\n",
        "  text-align: left;\n",
        "}\n",
-       "#T_6b2ae_row0_col0, #T_6b2ae_row0_col1, #T_6b2ae_row0_col2, #T_6b2ae_row1_col0, #T_6b2ae_row1_col1, #T_6b2ae_row1_col2, #T_6b2ae_row2_col0, #T_6b2ae_row2_col1, #T_6b2ae_row2_col2, #T_6b2ae_row3_col0, #T_6b2ae_row3_col1, #T_6b2ae_row3_col2, #T_6b2ae_row4_col0, #T_6b2ae_row4_col1, #T_6b2ae_row4_col2, #T_6b2ae_row5_col0, #T_6b2ae_row5_col1, #T_6b2ae_row5_col2, #T_6b2ae_row6_col0, #T_6b2ae_row6_col1, #T_6b2ae_row6_col2, #T_6b2ae_row7_col0, #T_6b2ae_row7_col1, #T_6b2ae_row7_col2, #T_6b2ae_row8_col0, #T_6b2ae_row8_col1, #T_6b2ae_row8_col2 {\n",
+       "#T_ca45c_row0_col0, #T_ca45c_row0_col1, #T_ca45c_row0_col2, #T_ca45c_row1_col0, #T_ca45c_row1_col1, #T_ca45c_row1_col2, #T_ca45c_row2_col0, #T_ca45c_row2_col1, #T_ca45c_row2_col2, #T_ca45c_row3_col0, #T_ca45c_row3_col1, #T_ca45c_row3_col2, #T_ca45c_row4_col0, #T_ca45c_row4_col1, #T_ca45c_row4_col2, #T_ca45c_row5_col0, #T_ca45c_row5_col1, #T_ca45c_row5_col2, #T_ca45c_row6_col0, #T_ca45c_row6_col1, #T_ca45c_row6_col2, #T_ca45c_row7_col0, #T_ca45c_row7_col1, #T_ca45c_row7_col2, #T_ca45c_row8_col0, #T_ca45c_row8_col1, #T_ca45c_row8_col2 {\n",
        "  text-align: left;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_6b2ae\">\n",
+       "<table id=\"T_ca45c\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_6b2ae_level0_col0\" class=\"col_heading level0 col0\" >Context</th>\n",
-       "      <th id=\"T_6b2ae_level0_col1\" class=\"col_heading level0 col1\" >Question</th>\n",
-       "      <th id=\"T_6b2ae_level0_col2\" class=\"col_heading level0 col2\" >Answer</th>\n",
+       "      <th id=\"T_ca45c_level0_col0\" class=\"col_heading level0 col0\" >Context</th>\n",
+       "      <th id=\"T_ca45c_level0_col1\" class=\"col_heading level0 col1\" >Question</th>\n",
+       "      <th id=\"T_ca45c_level0_col2\" class=\"col_heading level0 col2\" >Answer</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_6b2ae_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_6b2ae_row0_col0\" class=\"data row0 col0\" > Before we get started, let’s outline the relationship between machine\n",
+       "      <th id=\"T_ca45c_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_ca45c_row0_col0\" class=\"data row0 col0\" > Before we get started, let’s outline the relationship between machine\n",
        "learning and information theory. Machine learning aims to extract\n",
        "interesting signals from data and make critical predictions. On the\n",
        "other hand, information theory studies encoding, decoding, transmitting,\n",
@@ -422,17 +422,17 @@
        "use the cross-entropy loss as described in Section 4.1. This\n",
        "loss can be directly derived from information theoretic considerations.\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row0_col1\" class=\"data row0 col1\" > How does information theory relate to machine learning?\n",
+       "      <td id=\"T_ca45c_row0_col1\" class=\"data row0 col1\" > How does information theory relate to machine learning?\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row0_col2\" class=\"data row0 col2\" > Information theory provides fundamental language for discussing the information processing in machine learned systems. Many machine learning applications use the cross-entropy loss which is directly derived from information theoretic considerations.</td>\n",
+       "      <td id=\"T_ca45c_row0_col2\" class=\"data row0 col2\" > Information theory provides fundamental language for discussing the information processing in machine learned systems. Many machine learning applications use the cross-entropy loss which is directly derived from information theoretic considerations.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6b2ae_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_6b2ae_row1_col0\" class=\"data row1 col0\" > The concept of information entropy was introduced by Claude E. Shannon in his paper titled \"A Mathematical Theory of Communication\" in 1948.\n",
+       "      <th id=\"T_ca45c_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_ca45c_row1_col0\" class=\"data row1 col0\" > The concept of information entropy was introduced by Claude E. Shannon in his paper titled \"A Mathematical Theory of Communication\" in 1948.\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row1_col1\" class=\"data row1 col1\" > When was the concept of information entropy introduced?\n",
+       "      <td id=\"T_ca45c_row1_col1\" class=\"data row1 col1\" > When was the concept of information entropy introduced?\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row1_col2\" class=\"data row1 col2\" > The concept of information entropy was introduced by Claude E. Shannon in 1948.\n",
+       "      <td id=\"T_ca45c_row1_col2\" class=\"data row1 col2\" > The concept of information entropy was introduced by Claude E. Shannon in 1948.\n",
        "```\n",
        "\n",
        "## Answer (2)\n",
@@ -444,8 +444,8 @@
        "**Answer:** Claude E. Shannon.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6b2ae_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_6b2ae_row2_col0\" class=\"data row2 col0\" > Consider the following thought experiment. We have a friend with a deck\n",
+       "      <th id=\"T_ca45c_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_ca45c_row2_col0\" class=\"data row2 col0\" > Consider the following thought experiment. We have a friend with a deck\n",
        "of cards. They will shuffle the deck, flip over some cards, and tell us\n",
        "statements about the cards. We will try to assess the information\n",
        "content of each statement. For example, if they say \"There are two red\n",
@@ -454,22 +454,22 @@
        "statement actually has more information content because there are only four\n",
        "red cards in the deck. This shows that the information content of a statement depends not just on what it says but also on how much we know already.\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row2_col1\" class=\"data row2 col1\" > What does the information content of a statement depend on?\n",
+       "      <td id=\"T_ca45c_row2_col1\" class=\"data row2 col1\" > What does the information content of a statement depend on?\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row2_col2\" class=\"data row2 col2\" > The information content of a statement depends on both what it says and how much we already know.\n",
+       "      <td id=\"T_ca45c_row2_col2\" class=\"data row2 col2\" > The information content of a statement depends on both what it says and how much we already know.\n",
        "```</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6b2ae_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_6b2ae_row3_col0\" class=\"data row3 col0\" > Next, they flip over a card and say, “I see a heart.” This provides us\n",
+       "      <th id=\"T_ca45c_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_ca45c_row3_col0\" class=\"data row3 col0\" > Next, they flip over a card and say, “I see a heart.” This provides us\n",
        "some information, but in reality there are only \\(4\\) different\n",
        "suits that were possible, each equally likely, so we are not surprised\n",
        "by this outcome. We hope that whatever the measure of information, this\n",
        "event should have low information content.\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row3_col1\" class=\"data row3 col1\" > What is the number of suits that were possible when flipping over a card?\n",
+       "      <td id=\"T_ca45c_row3_col1\" class=\"data row3 col1\" > What is the number of suits that were possible when flipping over a card?\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row3_col2\" class=\"data row3 col2\" > There were four suits possible.\n",
+       "      <td id=\"T_ca45c_row3_col2\" class=\"data row3 col2\" > There were four suits possible.\n",
        "```\n",
        "\n",
        "## Answer (2)\n",
@@ -485,12 +485,12 @@
        "Comment: @MichaelHardy You're right; thanks! I fixed my mistake.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6b2ae_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_6b2ae_row4_col0\" class=\"data row4 col0\" > The next step is to calculate the probability of each outcome. For instance, if we know that the probability of getting heads is 0.5, then the probability of getting tails is also 0.5.\n",
+       "      <th id=\"T_ca45c_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_ca45c_row4_col0\" class=\"data row4 col0\" > The next step is to calculate the probability of each outcome. For instance, if we know that the probability of getting heads is 0.5, then the probability of getting tails is also 0.5.\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row4_col1\" class=\"data row4 col1\" > What is the probability of getting tails when flipping over a fair coin?\n",
+       "      <td id=\"T_ca45c_row4_col1\" class=\"data row4 col1\" > What is the probability of getting tails when flipping over a fair coin?\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row4_col2\" class=\"data row4 col2\" > The probability of getting tails when flipping over a fair coin is 0.5.\n",
+       "      <td id=\"T_ca45c_row4_col2\" class=\"data row4 col2\" > The probability of getting tails when flipping over a fair coin is 0.5.\n",
        "```\n",
        "\n",
        "## Answer (6)\n",
@@ -526,28 +526,28 @@
        "Comment: @JamesK.Polk I just noticed something else interesting. If we let $r$ be the number of red marbles in the urn initially, then the probability of picking two red marbles consecutively can be expressed as $$ \\frac{pr}{(r+1)(r+2)} + \\</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6b2ae_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_6b2ae_row5_col0\" class=\"data row5 col0\" > Let’s take this to the logical extreme. Suppose that finally they flip\n",
+       "      <th id=\"T_ca45c_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_ca45c_row5_col0\" class=\"data row5 col0\" > Let’s take this to the logical extreme. Suppose that finally they flip\n",
        "over every card from the deck and read off the entire sequence of the\n",
        "shuffled deck. There are \\(52!\\) different orders to the deck, again\n",
        "all equally likely, so we need a lot of information to know which one it\n",
        "is. This is known as the “infinite information” problem.\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row5_col1\" class=\"data row5 col1\" > What is the infinite information problem?\n",
+       "      <td id=\"T_ca45c_row5_col1\" class=\"data row5 col1\" > What is the infinite information problem?\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row5_col2\" class=\"data row5 col2\" > The infinite information problem refers to the situation where there are an infinite number of possible outcomes or sequences, all equally likely, and therefore require an infinite amount of information to determine which one has occurred.</td>\n",
+       "      <td id=\"T_ca45c_row5_col2\" class=\"data row5 col2\" > The infinite information problem refers to the situation where there are an infinite number of possible outcomes or sequences, all equally likely, and therefore require an infinite amount of information to determine which one has occurred.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6b2ae_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_6b2ae_row6_col0\" class=\"data row6 col0\" > Any notion of information we develop must conform to this intuition.\n",
+       "      <th id=\"T_ca45c_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_ca45c_row6_col0\" class=\"data row6 col0\" > Any notion of information we develop must conform to this intuition.\n",
        "Indeed, in the next sections we will learn how to compute that these\n",
        "events have \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\),\n",
        "\\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of\n",
        "information respectively.\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row6_col1\" class=\"data row6 col1\" > What is the number of bits required to represent an event with zero bits of information?\n",
+       "      <td id=\"T_ca45c_row6_col1\" class=\"data row6 col1\" > What is the number of bits required to represent an event with zero bits of information?\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row6_col2\" class=\"data row6 col2\" > The number of bits required to represent an event with zero bits of information is zero.\n",
+       "      <td id=\"T_ca45c_row6_col2\" class=\"data row6 col2\" > The number of bits required to represent an event with zero bits of information is zero.\n",
        "```\n",
        "\n",
        "## Answer (3)\n",
@@ -571,8 +571,8 @@
        "Comment: @user1234567 I see your point now. Thank you for clarifying.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6b2ae_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "      <td id=\"T_6b2ae_row7_col0\" class=\"data row7 col0\" > If we read through these thought experiments, we see a natural idea. As\n",
+       "      <th id=\"T_ca45c_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_ca45c_row7_col0\" class=\"data row7 col0\" > If we read through these thought experiments, we see a natural idea. As\n",
        "a starting point, rather than caring about the knowledge, we may build\n",
        "off the idea that information represents the degree of surprise or the\n",
        "abstract possibility of the event. For example, if we want to describe\n",
@@ -581,29 +581,29 @@
        "to describe an event depends on how surprising it is. The more surprising\n",
        "the event, the more information we need to describe it.\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row7_col1\" class=\"data row7 col1\" > What does information represent according to this idea?\n",
+       "      <td id=\"T_ca45c_row7_col1\" class=\"data row7 col1\" > What does information represent according to this idea?\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row7_col2\" class=\"data row7 col2\" > Information represents the degree of surprise or the abstract possibility of the event.</td>\n",
+       "      <td id=\"T_ca45c_row7_col2\" class=\"data row7 col2\" > Information represents the degree of surprise or the abstract possibility of the event.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6b2ae_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "      <td id=\"T_6b2ae_row8_col0\" class=\"data row8 col0\" > In 1948, Claude E. Shannon published A Mathematical Theory of\n",
+       "      <th id=\"T_ca45c_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_ca45c_row8_col0\" class=\"data row8 col0\" > In 1948, Claude E. Shannon published A Mathematical Theory of\n",
        "Communication (Shannon, 1948) establishing the theory of\n",
        "information. In his article, Shannon introduced the concept of\n",
        "information entropy for the first time. We will begin our journey here.\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row8_col1\" class=\"data row8 col1\" > What was the title of the paper that Claude E. Shannon published in 1948?\n",
+       "      <td id=\"T_ca45c_row8_col1\" class=\"data row8 col1\" > What was the title of the paper that Claude E. Shannon published in 1948?\n",
        "</td>\n",
-       "      <td id=\"T_6b2ae_row8_col2\" class=\"data row8 col2\" > The title of the paper was \"A Mathematical Theory of Communication\".</td>\n",
+       "      <td id=\"T_ca45c_row8_col2\" class=\"data row8 col2\" > The title of the paper was \"A Mathematical Theory of Communication\".</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fce908dff40>"
+       "<pandas.io.formats.style.Styler at 0x7fb6c0e63b20>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
